# sqlx_test_example

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yaml
.github/workflows/: push.yml
migrations/: 20230425005516_gen_tables.sql
rs/: Dockerfile.utest
rs/src/: lib.rs
rs/src/db/model/: item.rs
rs/tests/fixtures/: item_types.sql
src/db/model/: cart.rs  mod.rs
tests/: item.rs
