[package]
name = "sqlx_test_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version="0.6.3", features=["runtime-tokio-rustls", "postgres", "uuid", "time", "macros", "migrate"] }
tokio = {version = "1", features=["full"]}

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]
